prod/igw.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
  tags= { 
    Name  = "${var.environment}-vpc"
    Environment = var.environment
    }
  }
