prod/public-subnet.tf
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.public_subnets_cidr)
  cidr_block              = element(var.public_subnets_cidr, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = true  

    tags = {
      Name        = "${var.environment}-${element(var.availability_zones, count.index)}-public-subnet"
      Environment = "${var.environment}"
	      }
	      }
